test/mpi/errors/cxx/Makefile.am
##
## Copyright 2026 Argonne National Laboratory
## SPDX-License-Identifier: Apache-2.0
##

include $(top_srcdir)/Makefile_single.mtest

EXTRA_DIST = testlist.in

SUBDIRS = $(iodir) errhan
DIST_SUBDIRS = io errhan

